# GenAi_library

./: .flake8  .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
.azure/aml/: config.json
logs/config/: logging_config.yaml
notebooks/: sample_rag_langchain.ipynb
src/: main.py  mini_app.py  test_langchain.py  vision.py  vision2.py
src/EYAnalytics/: __init__.py
src/EYAnalytics/utils/: aml_pipeline.py  cognitive_services.py  keyvault.py  openaiAPI.py  storage.py
src/ey_analytics/: __init__.py
src/ey_analytics/ai/: __init__.py  cognitive_services.py  speech.py  vision.py
src/ey_analytics/apps/: main.py  mini_app.py  test_langchain.py  vision.py  vision2.py
src/ey_analytics/cognitive_services/: __init__.py
src/ey_analytics/document_inteligence/: document_intelligence.py
src/ey_analytics/openai_api/: __init__.py  openai_api.py
src/ey_analytics/utils/: __init__.py  keyvault.py  logger.py  storage.py
tests/: test_logging.py
