[metadata]
name = ey-analytics
version = 0.0.1
author = GenAI Team
description = A library to standardize the use of GenAI models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data=True
[options.packages.find]
where = src